--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.26",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-easytable": "^1.7.2",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
