--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.26",
     "core-js": "^2.6.5",
+    "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-easytable": "^1.7.2",
