--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.26",
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.4.2",
     "vue-easytable": "^1.7.2",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3"
