--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-chartjs": "^3.4.2",
     "vue-easytable": "^1.7.2",
     "vue-moment": "^4.0.0",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
