--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-easytable": "^1.7.2",
+    "vue-loading-overlay": "^3.2.0",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.1"
