--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-easytable": "^1.7.2",
     "vue-loading-overlay": "^3.2.0",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
+    "vue-socket.io": "^3.0.7",
+    "vue-star": "0.0.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
