--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^3.0.3",
     "vue-socket.io": "^3.0.7",
     "vue-star": "0.0.4",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
