--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-socket.io": "^3.0.7",
     "vue-star": "0.0.4",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "xlsx": "^0.15.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
